--- a/M/Moca/Moca.html
+++ b/M/Moca/Moca.html
@@ -21,8 +21,9 @@ Asegúrate de traer tu cámara para capturar la increíble vista.
 Mirador de Moca es un gran lugar para cambiar tu perspectiva y explorar el mundo desde un ángulo diferente.
     </p>
     <p>
+      Pueden visitar el Mirador de Moca en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/zmFkfjCwGMVMLTHcA">PR-110 Kilómetro 15.3, Moca, 00676</a></li>
       </ul>
     </p>
     <h2>Museo del Mundillo</h2>
@@ -33,10 +34,10 @@ Mirador de Moca es un gran lugar para cambiar tu perspectiva y explorar el mundo
       Este museo honra y continúa el legado del pueblo, a través de la conservación de piezas únicas de 
       mundillo, así como ofreciendo talleres de mundillo a grupos de todas las edades.
     </p>
-    Pueden visitar en:
+    Pueden visitar el Museo del Mundillo en:
     <p>
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/VZR1EjdR2ED5tjL8A">211 Cll José Celso Barbosa #243, Moca, 00676</a></li>
       </ul>
     </p>
     <h2>Hacienda Labadie</h2>
@@ -48,9 +49,9 @@ Mirador de Moca es un gran lugar para cambiar tu perspectiva y explorar el mundo
       hispano-estadounidense, se hizo un cambio al policía de choque a pedido de la época: la caña de azúcar.
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar la Hacienda Labadie en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/ZAfG3FvLEW5jYZ1X6">FW3Q+5CR, Aceitunas, Moca 00676</a></li>
       </ul>
     </p>
     <h2>Bandera de Columpios</h2>
@@ -58,34 +59,35 @@ Mirador de Moca es un gran lugar para cambiar tu perspectiva y explorar el mundo
     <p class="text">
       La prueba de esto se observa con frecuencia en las redes sociales que cada vez se invaden más por 
       imágenes de gente de todas las edades que acude a alguno de los columpios rústicos que han ido ubicando en distintos puntos de la Isla.
-
+<br>
 Se puede establecer que hay una fiebre por visitar estos columpios, al
       igual que está ocurriendo con el amor que se ha despertado por la bandera 
       nuestra por iniciativas como la llamada “78 pueblos, una bandera”, del joven Héctor Collazo.
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar la Bandera de Columpios en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/HDGpjptsj8gbrZF28">9VWR+788, PR-110, Moca, 00676</a></li>
       </ul>
     </p>
   </div>
   <h2>Restaurantes</h2>
   <div class="Restaurantes">
   <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Pasatiempos (787)-877-9700</li>
+    <li>Barrilitos (787)-900-5349</li>
+    <li>Picadero (Tapas, Wine & Beer) (787)-234-6230</li>
+    <li>Adriatic (787)-877-9191</li>
+    <li>JB Bar & Grill Restaurant (787)-818-1919</li>
   </ul>
   </div>
   <h2>Eventos</h2>
   <div class="Eventos">
      <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Festival del Camarón - Mayo</li>
+    <li>Fiesta del Mundillo - Noviembre </li>
+    <li>Fiestas Patronales Nuestra Señora de la Monserrate - Septiembre</li>
+    <li>Parranda del Enchaquetao - Diciembre</li>
   </ul>
   </div>
 </body>
