--- a/M/Morovis/Morovis.html
+++ b/M/Morovis/Morovis.html
@@ -12,18 +12,28 @@
   <h2>Lugares turísticos en Morovis</h2>
 </div>
   <div class="Lugares">
-    <h2></h2>
+    <h2>Cavernas Las Cabachuelas</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Explora la Reserva Natural Las Cabachuelas y descubre zanjones, 
+      cavernas y un sistema de cuevas con alto valor ecológico, cultural, histórico y 
+      arqueológico. Petroglifos, pictografías, los fósiles del oso perezoso y el guabá son 
+      algunas de las atracciones de estas cuevas.
     </p>
     <p>
       <ul>
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Nacimiento de Morovis</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      El Nacimiento de Morovis, tradición de belén puertorriqueña con más de dos mil piezas, 
+      estará disponible para disfrute del pueblo hasta el domingo 20 de enero, como parte de la fidelidad a la tradición de las octavitas.
+<br>
+Durante décadas, el doctor Francisco del Río, con oficina en el casco urbano moroveño, ha auspiciado
+      este hermoso nacimiento que se exhibe cada año durante la época navideña en sus instalaciones en la calle Progreso,
+      justo al lado de la plaza pública “Juan Evangelista Rivera”.
     </p>
     Pueden visitar en:
     <p>
@@ -31,9 +41,12 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Cascada Barrio Perchas</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Localizado en la región central de nuestra Isla, Morovis fue fundado oficialmente en el 1818.
+      Su primer alcalde fue Juan José de Torres. Es una zona montañosa la cual se forma cascaditas como estas. 
+      Hermosas corrientes de agua que bajan por la montaña.
     </p>
     <p>
       Pueden visitar en:
@@ -41,9 +54,12 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Centro Cultural Diógenes Colón Gómez</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      El Centro Cultural Diógenes Colon Gómez en Morovis, fue fundado en el año 1964. 
+      Lleva el nombre de quien en vida fuese el Director y Fundador de la Banda Municipal. 
+      Su sede está localizada en el antigüo Hospital Municipal del pueblo de Morovis.
     </p>
     <p>
       Pueden visitar en:
