--- a/M/Morovis/Morovis.html
+++ b/M/Morovis/Morovis.html
@@ -13,7 +13,7 @@
 </div>
   <div class="Lugares">
     <h2>Cavernas Las Cabachuelas</h2>
-    <img src="" width="80%" height="30%">
+    <img src="Cabachuelas1.jpeg" width="80%" height="30%">
     <p class="text">
       Explora la Reserva Natural Las Cabachuelas y descubre zanjones, 
       cavernas y un sistema de cuevas con alto valor ecológico, cultural, histórico y 
