--- a/M/Morovis/Morovis.html
+++ b/M/Morovis/Morovis.html
@@ -55,7 +55,7 @@ Durante décadas, el doctor Francisco del Río, con oficina en el casco urbano m
       </ul>
     </p>
     <h2>Centro Cultural Diógenes Colón Gómez</h2>
-    <img src="" width="80%" height="30%">
+    <img src="Centro_Cultural_Diogenes_Colon_Gomez__2.jpeg" width="80%" height="30%">
     <p class="text">
       El Centro Cultural Diógenes Colon Gómez en Morovis, fue fundado en el año 1964. 
       Lleva el nombre de quien en vida fuese el Director y Fundador de la Banda Municipal. 
