--- a/M/Morovis/Morovis.html
+++ b/M/Morovis/Morovis.html
@@ -26,7 +26,7 @@
       </ul>
     </p>
     <h2>Nacimiento de Morovis</h2>
-    <img src="" width="80%" height="30%">
+    <img src="Nacimiento-952x615.jpeg" width="80%" height="30%">
     <p class="text">
       El Nacimiento de Morovis, tradición de belén puertorriqueña con más de dos mil piezas, 
       estará disponible para disfrute del pueblo hasta el domingo 20 de enero, como parte de la fidelidad a la tradición de las octavitas.
