--- a/N/Naranjito/Naranjito.html
+++ b/N/Naranjito/Naranjito.html
@@ -12,18 +12,27 @@
   <h2>Lugares turísticos en Naranjito</h2>
 </div>
   <div class="Lugares">
-    <h2></h2>
+    <h2>Mirador Las Lagrimas</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Mirador Las Lagrimas se encuentra en Naranjito (Puerto Rico). Mirador Las Lagrimas está trabajando en actividades de Deportes y recreación.
+      Si vas de camino hacia las montañas de Naranjito y Barranquitas, hay un lugar al costado de la carretera, ideal para
+      hacer una paradita y estirar las piernas. 
+      El lugar es simple, pero perfecto para tirar fotos hermosas de la naturaleza, cascadas y selfies entre amistades.
     </p>
     <p>
       <ul>
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Paseo Lineal De Naranjito</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Paseo Lineal anexo al Puente Atirantado. Este paseo tiene una longitud aproximada de 1,200 metros lineales 
+      ideales para caminar o correr bicicleta. Además cuenta con un mirador , dos gazebos, área recreativa para niños,
+      estaciones de ejercicios al aire libre y un restaurante. Como parte del Paseo Lineal puedes disfrutar de un área conocida 
+      como Las Veredas. Entre la flora, fauna y la hermosa vista del lago puedes caminarlo o correrlo. La experiencia de recorrer 
+      las veredas aporta a la salud ,al entrenamiento físico, recreacional, turístico y educativo.
     </p>
     Pueden visitar en:
     <p>
@@ -31,9 +40,12 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>El Abanico, Naranjito</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      El Abanico es un sector perteneciente al barrio Cedro Arriba de Naranjito. Es el punto que conecta a los municipios de 
+      Naranjito, Barranquitas y Comerío a través de las carreteras PR-152 y PR-779.
+
     </p>
     <p>
       Pueden visitar en:
@@ -41,14 +53,16 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Parroqia San Miguel Arcángel</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Donde ubica entre otras cosas dos esculturas en honor al Patrón San Miguel Arcángel y a San Antonio de 
+      Padua que fueron creadas por el joven escultor naranjiteño Roberto Cintrón Otero.
     </p>
     <p>
       Pueden visitar en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/Vd6CJqxdaCYoPKEdA">C. Georgetti, Naranjito, 00719</a></li>
       </ul>
     </p>
   </div>
