--- a/N/Naranjito/Naranjito.html
+++ b/N/Naranjito/Naranjito.html
@@ -54,7 +54,7 @@
       </ul>
     </p>
     <h2>Parroqia San Miguel Arcángel</h2>
-    <img src="" width="80%" height="30%">
+    <img src="6327666946_47c6fab664_z.jpeg" width="80%" height="30%">
     <p class="text">
       Donde ubica entre otras cosas dos esculturas en honor al Patrón San Miguel Arcángel y a San Antonio de 
       Padua que fueron creadas por el joven escultor naranjiteño Roberto Cintrón Otero.
