--- a/N/Naranjito/Naranjito.html
+++ b/N/Naranjito/Naranjito.html
@@ -41,7 +41,7 @@
       </ul>
     </p>
     <h2>El Abanico, Naranjito</h2>
-    <img src="" width="80%" height="30%">
+    <img src="Barrio_Cedro_Arriba,_Naranjito,_Puerto_Rico.jpeg" width="80%" height="30%">
     <p class="text">
       El Abanico es un sector perteneciente al barrio Cedro Arriba de Naranjito. Es el punto que conecta a los municipios de 
       Naranjito, Barranquitas y Comerío a través de las carreteras PR-152 y PR-779.
