--- a/N/Naranjito/Naranjito.html
+++ b/N/Naranjito/Naranjito.html
@@ -26,7 +26,7 @@
       </ul>
     </p>
     <h2>Paseo Lineal De Naranjito</h2>
-    <img src="" width="80%" height="30%">
+    <img src="DJI_0157.jpeg" width="80%" height="30%">
     <p class="text">
       Paseo Lineal anexo al Puente Atirantado. Este paseo tiene una longitud aproximada de 1,200 metros lineales 
       ideales para caminar o correr bicicleta. Además cuenta con un mirador , dos gazebos, área recreativa para niños,
