--- a/N/Naranjito/Naranjito.html
+++ b/N/Naranjito/Naranjito.html
@@ -13,7 +13,7 @@
 </div>
   <div class="Lugares">
     <h2>Mirador Las Lagrimas</h2>
-    <img src="" width="80%" height="30%">
+    <img src="Mirador_Las_Lagrimas5_0.jpeg" width="80%" height="30%">
     <p class="text">
       Mirador Las Lagrimas se encuentra en Naranjito (Puerto Rico). Mirador Las Lagrimas está trabajando en actividades de Deportes y recreación.
       Si vas de camino hacia las montañas de Naranjito y Barranquitas, hay un lugar al costado de la carretera, ideal para
