--- a/N/Naranjito/Naranjito.html
+++ b/N/Naranjito/Naranjito.html
@@ -21,8 +21,9 @@
       El lugar es simple, pero perfecto para tirar fotos hermosas de la naturaleza, cascadas y selfies entre amistades.
     </p>
     <p>
+      Pueden visitar el Mirador Las Lagrimas en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/1SVCJuKoajtqz5jv5">7PPW+45F, Naranjito 00783</a></li>
       </ul>
     </p>
     <h2>Paseo Lineal De Naranjito</h2>
@@ -37,7 +38,7 @@
     Pueden visitar en:
     <p>
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/gMjm6eSwhVToJxZQ7">8QCV+93R, Naranjito, 00957</a></li>
       </ul>
     </p>
     <h2>El Abanico, Naranjito</h2>
@@ -50,7 +51,7 @@
     <p>
       Pueden visitar en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/3hic8n9Ep4uvjByd7">6PW9+7MW, Comerio, Naranjito 00782</a></li>
       </ul>
     </p>
     <h2>Parroqia San Miguel Arcángel</h2>
@@ -69,19 +70,19 @@
   <h2>Restaurantes</h2>
   <div class="Restaurantes">
   <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>El Leñazo Pizza Bar & Grill (787)-483-1291</li>
+    <li>Changolandia Sport Bar (939)-280-3771</li>
+    <li>Parrilla Moderna (939)-276-9454</li>
+    <li>El Trolly de Pepito (787)-463-3130</li>
+    <li>Ardientes Pinchos Grill & Lounge (939)-493-5033</li>
   </ul>
   </div>
   <h2>Eventos</h2>
   <div class="Eventos">
      <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Festival de Arte y Cultura de San Antonio - junio</li>
+    <li>Fiestas San Antonio - Junio</li>
+    <li>Fiestas Patronales de San Miguel Arcángel - Septiembre</li>
   </ul>
   </div>
 </body>
