--- a/P/Patillas/Patillas.html
+++ b/P/Patillas/Patillas.html
@@ -26,8 +26,8 @@
         <li>Dirección: <a href=""></a></li>
       </ul>
     </p>
-    <h2>Charco Azul Picnic Area</h2>
-    <img src="" width="80%" height="30%">
+    <h2>Charco Azul</h2>
+    <img src="el-charco-azul.jpeg" width="80%" height="30%">
     <p class="text">
       Este pozo de agua dulce para nadar tiene entre 30 y 40 pies de ancho. Es alimentado por 
       2 pequeños arroyos que se derraman en el charco formando una linda cascada de 8 a 10 pies. 
