--- a/P/Patillas/Patillas.html
+++ b/P/Patillas/Patillas.html
@@ -41,7 +41,7 @@
       </ul>
     </p>
     <h2>Cascada El Survivor</h2>
-    <img src="" width="80%" height="30%">
+    <img src="maxresdefault.jpeg" width="80%" height="30%">
     <p class="text">
       Cascada Survivor es una cascada en Patillas, Puerto Rico.
 La cascada es un gran lugar para dar un paseo o caminar y disfrutar de la belleza de la naturaleza.
