--- a/P/Patillas/Patillas.html
+++ b/P/Patillas/Patillas.html
@@ -13,7 +13,7 @@
 </div>
   <div class="Lugares">
     <h2>Playa Villa Pesquera de Patillas</h2>
-    <img src="" width="80%" height="30%">
+    <img src="patillas-playa-villa-pesquera-side.jpeg" width="80%" height="30%">
     <p class="text">
       La Playa Villa Pesquera está localizada en el Barrio Bajo de Patillas. 
       Para llegar debe conducir por la carretera #3, cuando encuentre el Colmado Villa doble a la derecha si 
