--- a/P/Patillas/Patillas.html
+++ b/P/Patillas/Patillas.html
@@ -54,7 +54,7 @@ Explora el poder y la fuerza del agua y observa cómo se precipita hacia abajo.
       </ul>
     </p>
     <h2>Playa Inches</h2>
-    <img src="" width="80%" height="30%">
+    <img src="playa-inches-patillas01.jpeg" width="80%" height="30%">
     <p class="text">
       Playa Inches está ubicada en el pueblo de Patillas justo al lado de la carretera #3. 
       Esta hermosa playa es muy frecuentada por surfers, ya que casi todo el año tiene olas aptas para practicar todo tipo de deportes acuáticos.
