--- a/P/Patillas/Patillas.html
+++ b/P/Patillas/Patillas.html
@@ -22,8 +22,9 @@
       una vista espectacular a sus alrededores. 
     </p>
     <p>
+      Pueden visitar la Playa Villa Pesquera de Patillas en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/XMaXyF2p1hBTMLn66">X2F6+QMF, Patillas 00723</a></li>
       </ul>
     </p>
     <h2>Charco Azul</h2>
@@ -34,10 +35,10 @@
       El agua alrededor de los bordes no es profunda, tal vez un par de pies. Puedes sentarte en los bordes 
       y observar a los pececitos que llaman hogar a este estanque.
     </p>
-    Pueden visitar en:
+    Pueden visitar el Charco Azul en:
     <p>
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/WjHZUTL4CqQR93739">PR-184, Patillas 00723</a></li>
       </ul>
     </p>
     <h2>Cascada El Survivor</h2>
@@ -48,9 +49,9 @@ La cascada es un gran lugar para dar un paseo o caminar y disfrutar de la bellez
 Explora el poder y la fuerza del agua y observa cómo se precipita hacia abajo.
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar la Cascada El Survivor en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/pukKymtGy8msTsiM7">El Survivor, Patillas 00723</a></li>
       </ul>
     </p>
     <h2>Playa Inches</h2>
@@ -68,20 +69,20 @@ La playa es uno de los surfing spots favoritos del area sur de Puerto Rico.
 En la orilla hay muchos árboles, perfecto para cobijarse en períodos de descanso.
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar la Playa Inches en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/YbktBTksoh5iKEpf9">X2CQ+H6C, PR-3, Patillas, 00723</a></li>
       </ul>
     </p>
   </div>
   <h2>Restaurantes</h2>
   <div class="Restaurantes">
   <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Mar de la Tranquilidad (787)-839-6469</li>
+    <li>Restaurante el Musafá. Patillas P.R. (787)-839-5428</li>
+    <li>Agua Salada (787)-421-3320</li>
+    <li>Restaurante Playa Soles (787)-803-8012</li>
+    <li>Cayo Lindo Patillas (787)-803-8102</li>
   </ul>
   </div>
   <h2>Eventos</h2>
