--- a/P/Penuelas/Penuelas.html
+++ b/P/Penuelas/Penuelas.html
@@ -12,43 +12,64 @@
   <h2>Lugares turísticos en Peñuelas</h2>
 </div>
   <div class="Lugares">
-    <h2></h2>
+    <h2>La Soplaera Waterfall</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      El Charco La Soplaera es una de las charcas más accesibles que tiene Puerto Rico.
+      Al llegar al área solo debes caminar unos diez minutos aproximadamente del estacionamiento hasta la charca.
+
+El inicio del camino tiene una vereda donde se camina cómodamente y se puede apreciar de 
+      lejos la parte de arriba de la cascada.
+
+Ya luego de esa vereda se camina por un área rocosa, aquí deben tener un poco de precaución ya 
+      que algunas rocas pueden resbalar. Al pasar el área rocosa llegas a la charca.
+
+Es una charca de aguas cristalinas que reflejan azul turquesa. 
     </p>
     <p>
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/f24Qf2ZnP7WY2tMw8">37W7+986, Sec Pandura, Peñuelas 00624</a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Salto Peñuelas</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Está localizado en el Barrio Jaguas a más de 100 metros sobre el nivel del mar. 
+      Este charco recoge las aguas que resbalan bajo un peñón, las cuales posteriormente se convierten
+      en un salto de agua de aproximadamente 40 pies de altura. 
     </p>
     Pueden visitar en:
     <p>
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/vpsRkRDeCd4cBm4M6">37J6+8MG, Santo Domingo, Peñuelas 00624</a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>La Negra Cocola Railroad</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      La Locomotora número 2, conocida como ''La Negra Cocola'' fue traída a Peñuelas por la familia Valdivieso. 
+      Fue ordenada, igual que la número 1, a través de La South Porto Rico Sugar Co [SPRSCO] en La Central Gúanica. 
+      Era el año 1924, y Peñuelas necesitaba con urgencia una máquina potente que facilitara las labores agrícolas del cañaveral.Esta máquina 
+      , creada por The Baldwin Locomotive Works of Fhiladelphia,USA,con un peso de 18 toneladas y unas ruedas de 33 pulgadas de diámetro 
+      era impulsada con carbón de piedra y se utilizaba para transportar la caña desde el puente de ''La Pepita'' donde se encontraba la 
+      estación del Ferrocarril, hasta Tallaboa. De este lugar se llevaba a la Central Mercedita de Ponce. 
     </p>
     <p>
       Pueden visitar en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/eBZrzHprbpyJ3MPC8">375G+2WC, Penuelas, Peñuelas 00624</a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Casa de la Historia Ramón Rivera "Bonyé"</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Museo que transporta al visitante en el tiempo, desde su comienzo en la historia del pueblo hace más de 400 años, 
+      en el cual los primeros visitantes y pobladores provenientes de las costas de Venezuela dejaron su legado arqueológico.
     </p>
     <p>
       Pueden visitar en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/fArnGKDXWGgi11XA6">800 C. Luis Muñoz Rivera #898, Penuelas, Peñuelas 00624</a></li>
       </ul>
     </p>
   </div>
@@ -65,9 +86,7 @@
   <h2>Eventos</h2>
   <div class="Eventos">
      <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Fiestas Patronales de San José - Marzo</li>
   </ul>
   </div>
 </body>
