--- a/P/Penuelas/Penuelas.html
+++ b/P/Penuelas/Penuelas.html
@@ -61,7 +61,7 @@ Es una charca de aguas cristalinas que reflejan azul turquesa.
       </ul>
     </p>
     <h2>Casa de la Historia Ramón Rivera "Bonyé"</h2>
-    <img src="" width="80%" height="30%">
+    <img src="37301875.jpeg" width="80%" height="30%">
     <p class="text">
       Museo que transporta al visitante en el tiempo, desde su comienzo en la historia del pueblo hace más de 400 años, 
       en el cual los primeros visitantes y pobladores provenientes de las costas de Venezuela dejaron su legado arqueológico.
