--- a/P/Penuelas/Penuelas.html
+++ b/P/Penuelas/Penuelas.html
@@ -32,7 +32,7 @@ Es una charca de aguas cristalinas que reflejan azul turquesa.
       </ul>
     </p>
     <h2>Salto Peñuelas</h2>
-    <img src="" width="80%" height="30%">
+    <img src="hqdefault.jpeg" width="80%" height="30%">
     <p class="text">
       Está localizado en el Barrio Jaguas a más de 100 metros sobre el nivel del mar. 
       Este charco recoge las aguas que resbalan bajo un peñón, las cuales posteriormente se convierten
