--- a/P/Penuelas/Penuelas.html
+++ b/P/Penuelas/Penuelas.html
@@ -45,7 +45,7 @@ Es una charca de aguas cristalinas que reflejan azul turquesa.
       </ul>
     </p>
     <h2>La Negra Cocola Railroad</h2>
-    <img src="" width="80%" height="30%">
+    <img src="maxresdefault.jpeg" width="80%" height="30%">
     <p class="text">
       La Locomotora número 2, conocida como ''La Negra Cocola'' fue traída a Peñuelas por la familia Valdivieso. 
       Fue ordenada, igual que la número 1, a través de La South Porto Rico Sugar Co [SPRSCO] en La Central Gúanica. 
