--- a/P/Penuelas/Penuelas.html
+++ b/P/Penuelas/Penuelas.html
@@ -13,7 +13,7 @@
 </div>
   <div class="Lugares">
     <h2>La Soplaera Waterfall</h2>
-    <img src="" width="80%" height="30%">
+    <img src="soplaera-falls-1.jpeg" width="80%" height="30%">
     <p class="text">
       El Charco La Soplaera es una de las charcas más accesibles que tiene Puerto Rico.
       Al llegar al área solo debes caminar unos diez minutos aproximadamente del estacionamiento hasta la charca.
@@ -27,6 +27,7 @@ Ya luego de esa vereda se camina por un área rocosa, aquí deben tener un poco 
 Es una charca de aguas cristalinas que reflejan azul turquesa. 
     </p>
     <p>
+      Pueden visitar La Soplaera waterfall en:
       <ul>
         <li>Dirección: <a href="https://goo.gl/maps/f24Qf2ZnP7WY2tMw8">37W7+986, Sec Pandura, Peñuelas 00624</a></li>
       </ul>
@@ -38,7 +39,7 @@ Es una charca de aguas cristalinas que reflejan azul turquesa.
       Este charco recoge las aguas que resbalan bajo un peñón, las cuales posteriormente se convierten
       en un salto de agua de aproximadamente 40 pies de altura. 
     </p>
-    Pueden visitar en:
+    Pueden visitar el Salto Peñuelas en:
     <p>
       <ul>
         <li>Dirección: <a href="https://goo.gl/maps/vpsRkRDeCd4cBm4M6">37J6+8MG, Santo Domingo, Peñuelas 00624</a></li>
@@ -55,7 +56,7 @@ Es una charca de aguas cristalinas que reflejan azul turquesa.
       estación del Ferrocarril, hasta Tallaboa. De este lugar se llevaba a la Central Mercedita de Ponce. 
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar La Negra Cocola Railroad en:
       <ul>
         <li>Dirección: <a href="https://goo.gl/maps/eBZrzHprbpyJ3MPC8">375G+2WC, Penuelas, Peñuelas 00624</a></li>
       </ul>
@@ -67,7 +68,7 @@ Es una charca de aguas cristalinas que reflejan azul turquesa.
       en el cual los primeros visitantes y pobladores provenientes de las costas de Venezuela dejaron su legado arqueológico.
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar la Casa de la Historia Ramón Rivera "Bonyé" en:
       <ul>
         <li>Dirección: <a href="https://goo.gl/maps/fArnGKDXWGgi11XA6">800 C. Luis Muñoz Rivera #898, Penuelas, Peñuelas 00624</a></li>
       </ul>
@@ -76,11 +77,11 @@ Es una charca de aguas cristalinas que reflejan azul turquesa.
   <h2>Restaurantes</h2>
   <div class="Restaurantes">
   <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Tiempo Fuera Restaurante (787)-243-0264</li>
+    <li>La Luna Negra (939)-992-9055</li>
+    <li>La Rumba Bar & Fried Chicken (787)-327-0586</li>
+    <li>Lil Richie Pizza (787)-836-4448</li>
+    <li>La Fritanga Del Chef (787)-478-2185</li>
   </ul>
   </div>
   <h2>Eventos</h2>
