--- a/Q/Quebradillas/Quebradillas.html
+++ b/Q/Quebradillas/Quebradillas.html
@@ -9,46 +9,65 @@
 </head>
 <body>
 <div class="Titulo">
-  <h2>Lugares turísticos en </h2>
+  <h2>Lugares turísticos en Quebradillas</h2>
 </div>
   <div class="Lugares">
-    <h2></h2>
+    <h2>Parque Acuático de Quebradillas Rafael Pérez Santaliz</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      El Parque Acuático Rafael Pérez Santaliz está ubicado en el pueblo de Quebradillas.
+      Es muy fácil llegar, solo busca la plaza y encontrarás letreros con la dirección. 
+      Lo más llamativo del parque es un barco pirata que pondrá a volar la imaginación de los más pequeños. 
+      El barco es grandísimo y tiene detalles que lo hacen único como: la sirena del frente, la legendaria bandera pirata y sus cañones.
+      Dentro del barco los niños pueden disfrutar de sus múltiples chorreras y chorritos de agua.
+      Alrededor del barco continua la diversión con chorritos de agua que salen de todas partes, figuras en forma de ballena y 
+      sapos, cañones de agua y palmas.
     </p>
     <p>
+      Pueden visitar el Parque Acuático de Quebradillas Rafael Pérez Santaliz en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/fNqvscMsf3vR321F7">F3F5+5PG, Calle, Terranova, Quebradillas, Puerto Rico, Quebradillas 00678</a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Mirador de Guajataca</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      El Mirador de Guajataca ofrece algunas de las mejores vistas al mar que se encuentran en la costa norte de Puerto Rico, 
+      si no en toda la isla. Si conduce desde San Juan hacia la costa oeste, seguramente se encontrará con las espectaculares 
+      vistas de Quebradillas. Haga una parada técnica en el mirador para disfrutar de la vista y tomar fotos dignas de Instagram. 
+      Algunos días, encontrará un puñado de vendedores locales en el lugar que venden cocos frescos, buñuelos puertorriqueños e incluso recuerdos.
     </p>
-    Pueden visitar en:
+    Pueden visitar el Mirador de Guajataca en:
     <p>
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/Lm9vNK9y7egS9S2u8">F2QX+HCF, Carr Puerto Rico 2, Terranova, Quebradillas 00678</a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Puente Blanco</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      El Puente Blanco es un puente originalmente ferroviario y posteriormente vial que cruza el cañón de la quebrada La 
+      Mala en el barrio Terranova, a las afueras del pueblo de Quebradillas, Puerto Rico. Fue diseñado por el ingeniero Etienne Totti,
+      de la American Railroad Company of Puerto Rico, para sustituir el puente de acero que salvaba ese tramo desde 1907 por encontrarse 
+      este en malas condiciones
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar el Puente Blanco en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/srBeKcVRJkj3rQaJ7">F3PF+FG4, Cll Panoramica, Quebradillas, 00678</a></li>
       </ul>
     </p>
-    <h2></h2>
+    <h2>Ruinas del Fortín del Puerto Hermina</h2>
     <img src="" width="80%" height="30%">
     <p class="text">
+      Cuenta la leyenda que las ruinas encontradas en la playa de Herminia en Quebradillas solían ser un lugar de 
+      almacenamiento o escondite de piratas. Remontándose al siglo XVIII, es más plausible que estas ruinas fueran un puesto militar 
+      o una oficina de aduanas. El fuerte estuvo casi completamente olvidado hasta 1952 cuando se redescubrieron las ruinas.
     </p>
     <p>
-      Pueden visitar en:
+      Pueden visitar las Ruinas del Fortín del Puerto Hermina en:
       <ul>
-        <li>Dirección: <a href=""></a></li>
+        <li>Dirección: <a href="https://goo.gl/maps/nWiePFG4cmua4VyV6">F3MX+89C, PR-4485, San José, Quebradillas, Puerto Rico, Quebradillas 00678</a></li>
       </ul>
     </p>
   </div>
