--- a/Q/Quebradillas/Quebradillas.html
+++ b/Q/Quebradillas/Quebradillas.html
@@ -13,7 +13,7 @@
 </div>
   <div class="Lugares">
     <h2>Parque Acuático de Quebradillas Rafael Pérez Santaliz</h2>
-    <img src="" width="80%" height="30%">
+    <img src="QUEBRADILLAS-Parque Acuatico Rafael Pérez Santaliz^P1100120-BIG.jpeg" width="80%" height="30%">
     <p class="text">
       El Parque Acuático Rafael Pérez Santaliz está ubicado en el pueblo de Quebradillas.
       Es muy fácil llegar, solo busca la plaza y encontrarás letreros con la dirección. 
