--- a/Q/Quebradillas/Quebradillas.html
+++ b/Q/Quebradillas/Quebradillas.html
@@ -30,7 +30,7 @@
       </ul>
     </p>
     <h2>Mirador de Guajataca</h2>
-    <img src="" width="80%" height="30%">
+    <img src="acct_name_30657_2_e5b1d48b-5056-a36a-08c3ced2ca1c6e3f.jpeg" width="80%" height="30%">
     <p class="text">
       El Mirador de Guajataca ofrece algunas de las mejores vistas al mar que se encuentran en la costa norte de Puerto Rico, 
       si no en toda la isla. Si conduce desde San Juan hacia la costa oeste, seguramente se encontrará con las espectaculares 
