--- a/Q/Quebradillas/Quebradillas.html
+++ b/Q/Quebradillas/Quebradillas.html
@@ -58,7 +58,7 @@
       </ul>
     </p>
     <h2>Ruinas del Fortín del Puerto Hermina</h2>
-    <img src="" width="80%" height="30%">
+    <img src="guarida_1.jpeg" width="80%" height="30%">
     <p class="text">
       Cuenta la leyenda que las ruinas encontradas en la playa de Herminia en Quebradillas solían ser un lugar de 
       almacenamiento o escondite de piratas. Remontándose al siglo XVIII, es más plausible que estas ruinas fueran un puesto militar 
