--- a/Q/Quebradillas/Quebradillas.html
+++ b/Q/Quebradillas/Quebradillas.html
@@ -44,7 +44,7 @@
       </ul>
     </p>
     <h2>Puente Blanco</h2>
-    <img src="" width="80%" height="30%">
+    <img src="real-puente-blanco-white.jpeg" width="80%" height="30%">
     <p class="text">
       El Puente Blanco es un puente originalmente ferroviario y posteriormente vial que cruza el cañón de la quebrada La 
       Mala en el barrio Terranova, a las afueras del pueblo de Quebradillas, Puerto Rico. Fue diseñado por el ingeniero Etienne Totti,
