--- a/Q/Quebradillas/Quebradillas.html
+++ b/Q/Quebradillas/Quebradillas.html
@@ -74,19 +74,20 @@
   <h2>Restaurantes</h2>
   <div class="Restaurantes">
   <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Carbón y Leña Restaurant (787)-229-4596</li>
+    <li>1823 Restaurant (787)-378-3335</li>
+    <li>Todo Por Un Café (787)-229-8537</li>
+    <li>Refranes Coffee Bar (787)-222-9701</li>
+    <li>Frappe El Pirata (787)-597-9828</li>
   </ul>
   </div>
   <h2>Eventos</h2>
   <div class="Eventos">
      <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Carnaval del Guajataca - febrero</li>
+    <li>Festival de Chiringas - Febrero</li>
+    <li>Fiestas Patronales de San Rafael Arcángel - Octubre</li>
+    <li>Velorio de Reyes - Enero</li>
   </ul>
   </div>
 </body>
